fix scrolling on mobile?

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   overflow: auto;
   padding: 1rem 3em 3rem;
   font-size: 200%;
+  height: 100%;
   background: url("/1b.png");
 }
 
